# GPTFF

./: .gitignore  README.md  config.json  pyproject.toml  setup.py
gptff/model/: model.py  mpredict.py  torchsim.py
gptff/trainer/: trainer.py
gptff/utils_/: compute_nb.pyx  compute_tp.pyx  data.py
gptff/utils_/source/: utils.cc
notebooks/: basic-usage.ipynb
notebooks/data/: NaCl.cif  trajectory_npt.trj  trajectory_nvt.trj
pretrained/: gptff_v1.pth  gptff_v2.pth
