[build-system]
requires = ["Cython", "setuptools", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "gptff"
version = "1.0.1(Kawagarbo)"
description = "Graph-based Pretrained Transformer Force Field."
authors = [{ name = "Fankai Xie", email = "fankaixie@iphy.ac.cn" }]
requires-python = ">=3.8"

dependencies = [
    "ase>=3.22.1",
    "torch>=1.6",
    "pymatgen",
    "pandas",
    "tqdm",
    "pandas",
    "scikit-learn",
    "scipy",
]


[tool.setuptools.packages]
find = { include = ["gptff*"], exclude = ["test*"] }

[project.scripts]
gptff_trainer = "gptff.trainer.trainer:main"
