[build-system]
requires = ["Cython", "setuptools", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "gptff"
version = "1.0.1"
description = "Graph-based Pretrained Transformer Force Field."
authors = [{ name = "Fankai Xie", email = "fankaixiee@gmail.com" }]
requires-python = ">=3.10"

dependencies = [
    "ase>=3.26,<3.29",
    "torch>=2.0",
    "numpy",
    "pandas",
    "pymatgen",
    "scikit-learn",
    "psutil",
    "tqdm"
]

[project.optional-dependencies]
torchsim = ["torch-sim-atomistic>=0.6"]


[tool.setuptools.packages]
find = { include = ["gptff*"], exclude = ["test*"] }

[project.scripts]
gptff_trainer = "gptff.trainer.trainer:main"

[project.urls]
Homepage = "https://github.com/atomly-materials-research-lab/GPTFF"
